--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "bulma": "^0.7.2",
     "element-ui": "^2.4.11",
+    "font-awesome": "^4.7.0",
     "vanilla-antd-message": "0.0.9",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
