--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "api": "json-server ./src/services/mockups/db.json --watch --port 3001"
   },
   "dependencies": {
     "axios": "^0.18.0",
