--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "bulma": "^0.7.2",
     "element-ui": "^2.4.11",
+    "firebase": "^5.7.2",
     "font-awesome": "^4.7.0",
+    "ic-firebase-uploader": "^0.2.1",
     "vanilla-antd-message": "0.0.9",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
